--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@truffle/hdwallet-provider": "^2.1.1",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "truffle": "^5.6.8"
   }
 }
