--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js"
@@ -17,9 +16,11 @@
     "dotenv": "^8.2.0",
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.0.19",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "ganache-core": "^2.13.1",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^5.1.0",
+    "mongoose": "^7.0.1",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "node-rsa": "^1.1.1",
@@ -28,5 +29,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.6"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "description": ""
 }
