--- a/app/package.json
+++ b/app/package.json
@@ -24,7 +24,7 @@
     "yup": "^0.31.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts --openssl-legacy-provider build",
     "eject": "react-scripts eject"
   },
