--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "start-server": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,8 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.0.1"
+    "logger": "^0.0.1",
+    "mongoose": "^7.1.0",
+    "vercel": "^29.1.1",
+    "winston": "^3.8.2"
   }
 }
