--- a/app/.gitignore
+++ b/app/.gitignore
@@ -4,7 +4,6 @@
 /node_modules
 /.pnp
 .pnp.js
-.eslintcache
 
 # testing
 /coverage
@@ -18,8 +17,9 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vercel
