--- a/app/package.json
+++ b/app/package.json
@@ -1,8 +1,15 @@
 {
-  "name": "fakeproduct",
+  "name": "defraud",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
     "@portis/web3": "^3.0.3",
     "bootstrap": "^4.5.3",
     "formik": "^2.2.5",
@@ -10,27 +17,27 @@
     "keccak256": "^1.0.2",
     "node-gyp": "^9.3.0",
     "nodemon": "^2.0.20",
-    "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
     "react-qr-code": "^1.0.3",
     "react-qr-scanner": "0.0.11",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
     "recoil": "^0.1.2",
     "web3": "^1.3.3",
-    "yup": "^0.31.0"
+    "yup": "^0.31.0",
+    "sass": "^1.62.0"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
-      "react-app"
+      "react-app",
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -44,8 +51,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "node-sass": "^4.14.1"
   }
+
 }
